@@ -13,7 +13,7 @@ from django.forms.utils import ErrorList
 from django.template.loader import render_to_string
 from django.test import SimpleTestCase, TestCase
 from django.utils.html import format_html
-from django.utils.safestring import SafeData, mark_safe
+from django.utils.safestring import SafeData, SafeText, mark_safe
 from django.utils.translation import ugettext_lazy as __
 
 from wagtail.core import blocks
@@ -1213,6 +1213,42 @@ class TestStructBlock(SimpleTestCase):
             html
         )
         self.assertNotIn('<li class="required">', html)
+
+    def test_custom_render_form_template(self):
+        class LinkBlock(blocks.StructBlock):
+            title = blocks.CharBlock(required=False)
+            link = blocks.URLBlock(required=False)
+
+            class Meta:
+                form_template = 'tests/block_forms/struct_block_form_template.html'
+
+        block = LinkBlock()
+        html = block.render_form(block.to_python({
+            'title': "Wagtail site",
+            'link': 'http://www.wagtail.io',
+        }), prefix='mylink')
+
+        self.assertIn('<div>Hello</div>', html)
+        self.assertHTMLEqual('<div>Hello</div>', html)
+        self.assertTrue(isinstance(html, SafeText))
+
+    def test_custom_render_form_template_jinja(self):
+        class LinkBlock(blocks.StructBlock):
+            title = blocks.CharBlock(required=False)
+            link = blocks.URLBlock(required=False)
+
+            class Meta:
+                form_template = 'tests/jinja2/struct_block_form_template.html'
+
+        block = LinkBlock()
+        html = block.render_form(block.to_python({
+            'title': "Wagtail site",
+            'link': 'http://www.wagtail.io',
+        }), prefix='mylink')
+
+        self.assertIn('<div>Hello</div>', html)
+        self.assertHTMLEqual('<div>Hello</div>', html)
+        self.assertTrue(isinstance(html, SafeText))
 
     def test_render_required_field_indicator(self):
         class LinkBlock(blocks.StructBlock):
